# zero-to-prod-rust

./: .dockerignore  Cargo.toml  Dockerfile  README.md  sqlx-data.json
.config/: config.toml
.github/workflows/: general.yml
configuration/: base.yaml  production.yaml
migrations/: 20250612114300_create_subscriptions_table.sql  20250619000311_make_status_not_null_in_subscriptions.sql  20250619000646_create_subscription_tokens_table.sql  20250701092117_seed_user.sql  20250706032904_create_issue_delivery_queue_table.sql
scripts/: init_db.sh  init_redis.sh  test_send.sh
src/: authentication.rs  configuration.rs  domain.rs  email_client.rs  issue_delivery_worker.rs  main.rs  session_state.rs  startup.rs  telemetry.rs  utils.rs
src/authentication/: middleware.rs  password.rs
src/domain/: new_subscriber.rs  subscriber_email.rs  subscriber_name.rs
src/idempotency/: key.rs  persistence.rs
src/routes/: newsletters.rs  subscriptions.rs  subscriptions_confirm.rs
src/routes/admin/: dashboard.rs
src/routes/admin/newsletter/: post.rs
src/routes/admin/password/: get.rs  post.rs
src/routes/home/: home.html
src/routes/login/: get.rs  login.html  post.rs
tests/: health_check.rs
tests/api/: admin_dashboard.rs  change_password.rs  health_check.rs  helpers.rs  login.rs  newsletter.rs  subscriptions.rs  subscriptions_confirm.rs
