[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"
authors = ["Isaac Leong <isaacleong23367@gmail.com>"]

# Notice the double square brackets: it's an array in TOML's syntax,
# We can only have one library in a project, but we can have multiple binaries!
# If you want to manage multiple libraries in the same repository
# have a look at the workspace fature - we'll cover it later on.
[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
actix-web = "4.0.0"
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

[dev-dependencies]
reqwest = "0.11"

[lib]
# We could use any path here, but we are following the community convention
# We could specify a library name using the `name` filed. If unspecified,
# cargo will default to `package.name`, which is what we want
path = "src/lib.rs"
